the gifs no longer show, not because they aren't there - I'm trying to dynamically add them on right vs. wrong answer click. Right now SOMETHING is getting appended, but the gifs themselves are somehow invisible.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,10 @@ body {
 }
 
 .jumbotron {
-    background: none;
-    width: 60%;
+    background: rgba(211, 211, 211, .5);
+    width: 80%;
     margin: 0 auto;
+    margin-bottom: 5%;
 }
 
 #question-answer-container {
